# agora

./: .containerignore  Cargo.toml  Makefile  README.md  application.go  application_test.go  build.rs  compose.yaml  dgraph.go  docker-compose.yaml  domain.go  error.go  framework.go  framework_test.go  go.mod  go.sum  graphql.go  handler.go  main_test.go  repository.go  repository_test.go
.github/workflows/: cd.yaml  ci.yaml  publish.yaml  test.yaml
cmd/agora/: main.go  main_test.go
container/agora/: containerfile
container/grpc/: containerfile
container/setup/: containerfile
docker/agora/: dockerfile
envoy/: envoy.yaml
graphql/: schema.graphql
nginx/: nginx.conf
proto/: project.proto
scripts/: migrate_schema.py
src/: grpc.rs  lib.rs  main.rs  rabbitmq.rs  result.rs  surreal.rs  time.rs
src/event/: handlers.rs  mod.rs  payloads.rs
src/file/: bus.rs  event_bus.rs  event_handler.rs  handler.rs  mod.rs
src/metadata/: domain.rs  repository.rs
src/project/: application.rs  domain.rs  grpc.rs  repository.rs
universe/: application.go  domain.go  handler.go  main_test.go  repository.go  repository_test.go
