[package]
name = "agora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
async-trait = "0.1.57"
chrono = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
prost = "0.11.0" # protobuf
protoc = "2.27.1"
serde = "1.0.144" # data parser
serde_json = "1.0.85"
surrealdb = { git = "http://github.com/surrealdb/surrealdb" }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.8.1"

[build-dependencies]
tonic-build = "0.9.1"

[lib]
name = "agora"
path = "src/lib.rs"

[[bin]]
name = "agora"
path = "src/main.rs"
