[package]
name = "agora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
async-trait = "0.1.57"
bincode = "1.3.3"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.25"
lapin = { version = "2.1.1", optional = true }
lazy_static = "1.4.0"
log = "0.4.17"
prost = { version = "0.11.0", optional = true } # protobuf
protoc = { version = "2.27.1", optional = true }
serde = { version = "1.0.144", features = ["derive"] } # data parser
serde_json = "1.0.85"
surrealdb = { git = "http://github.com/surrealdb/surrealdb", tag = "v1.0.0-beta.9+20230402" }
strum = "0.24"  
strum_macros = "0.24"
tokio = { version = "1.24.1", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.9.2", optional = true }

[build-dependencies]
tonic-build = "0.9.2"

[lib]
name = "agora"
path = "src/lib.rs"

[features]
default = ["grpc", "agent"]
grpc = ["prost", "protoc", "tonic"]
agent = ["lapin"]

[[bin]]
name = "grpc"
path = "src/bin/grpc.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"
