[package]
name = "agora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
async-trait = "0.1.68"
bincode = "1.3.3"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
lapin = { version = "2.2.1", optional = true }
lazy_static = "1.4.0"
log = "0.4.18"
prost = { version = "0.12.1", optional = true } # protobuf
protoc = { version = "2.28.0", optional = true }
serde = { version = "1.0.163", features = ["derive"] } # data parser
serde_json = "1.0.96"
surrealdb = { git = "http://github.com/surrealdb/surrealdb", tag = "v1.0.0-beta.9+20230402" }
strum = "0.25.0"   
strum_macros = "0.25.0"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }
tonic = { version = "0.9.2", optional = true }

[build-dependencies]
tonic-build = "0.9.2"

[lib]
name = "agora"
path = "src/lib.rs"

[features]
default = ["grpc", "agent"]
grpc = ["prost", "protoc", "tonic"]
agent = ["lapin"]

[[bin]]
name = "grpc"
path = "src/bin/grpc.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"
